2013-04-24  Magnus Henoch  <magnus.henoch@gmail.com>

	* progmodes/compile.el (compilation-next-error-function):
	Pass "formats" to compilation-find-file (bug#11777).

2013-04-24  Glenn Morris  <rgm@gnu.org>

	* vc/vc-bzr.el (vc-bzr-print-log):
	* vc/vc-hg.el (vc-hg-print-log):
	* vc/vc-svn.el (vc-svn-print-log):
	Fix START-REVISION with LIMIT != 1.  (Bug#14168)

	* vc/vc-bzr.el (vc-bzr-print-log):
	* vc/vc-cvs.el (vc-cvs-print-log):
	* vc/vc-git.el (vc-git-print-log):
	* vc/vc-hg.el (vc-hg-print-log):
	* vc/vc-mtn.el (vc-mtn-print-log):
	* vc/vc-rcs.el (vc-rcs-print-log):
	* vc/vc-sccs.el (vc-sccs-print-log):
	* vc/vc-svn.el (vc-svn-print-log):
	* vc/vc.el (vc-print-log-internal): Doc fixes.

2013-04-23  Glenn Morris  <rgm@gnu.org>

	* startup.el (normal-no-mouse-startup-screen, normal-about-screen):
	Remove venerable code attempting to avoid substitute-command-keys.

2013-04-23  Tassilo Horn  <tsdh@gnu.org>

	* textmodes/reftex-vars.el (reftex-label-regexps):
	Call `reftex-compile-variables' after changes to this variable.

2013-04-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* jit-lock.el: Fix signals in jit-lock-force-redisplay (bug#13542).
	Use lexical-binding.
	(jit-lock-force-redisplay): Use markers, check buffer's continued
	existence and beware narrowed buffers.
	(jit-lock-fontify-now): Adjust call accordingly.

2013-04-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (minibuffer-completion-contents): Fix obsolescence info
	to avoid misleading the user.

2013-04-22  Leo Liu  <sdl.web@gmail.com>

	* info-look.el: Prefer latex2e.info.  (Bug#14240)

2013-04-22  Michael Albinus  <michael.albinus@gmx.de>

	Fix pack/unpack coding.  Reported by David Smith <davidsmith@acm.org>.

	* net/tramp-compat.el (tramp-compat-call-process): Move function ...
	* net/tramp.el (tramp-call-process): ... here
	(tramp-set-completion-function, tramp-parse-putty):
	* net/tramp-adb.el (tramp-adb-execute-adb-command):